--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+colorama==0.4.6
 dotenv==0.9.9
 greenlet==3.2.0
 numpy==2.2.2
@@ -8,5 +9,6 @@ python-dotenv==1.1.0
 pytz==2025.1
 six==1.17.0
 SQLAlchemy==2.0.37
+tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2025.1
