--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ psycopg2==2.9.10
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.1
+scipy==1.15.2
 six==1.17.0
 SQLAlchemy==2.0.37
 tqdm==4.67.1
