--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
+certifi==2025.1.31
+charset-normalizer==3.4.1
 colorama==0.4.6
 dotenv==0.9.9
+git-filter-repo==2.47.0
 greenlet==3.2.0
+idna==3.10
+joblib==1.4.2
 numpy==2.2.2
 pandas==2.2.3
 psycopg2==2.9.10
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.1
+requests==2.32.3
+scikit-learn==1.6.1
 scipy==1.15.2
 six==1.17.0
 SQLAlchemy==2.0.37
+threadpoolctl==3.6.0
 tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2025.1
+urllib3==2.4.0
